if (BUILD_SHARED_LIBS)
  add_library(${PROJECT_NAME}_f03_lib SHARED)
else()
  add_library(${PROJECT_NAME}_f03_lib STATIC)
endif()

set_target_properties(${PROJECT_NAME}_f03_lib PROPERTIES
  OUTPUT_NAME ${PROJECT_NAME}_f03
  VERSION ${CMAKE_PROJECT_VERSION}
  SOVERSION ${CMAKE_PROJECT_VERSION}
)

configure_file(
  ${CMAKE_CURRENT_SOURCE_DIR}/lib${PROJECT_NAME}_f03.f90
  ${CMAKE_CURRENT_BINARY_DIR}/lib${PROJECT_NAME}_f03.f90
)

target_sources(${PROJECT_NAME}_f03_lib
  PRIVATE
  ${CMAKE_CURRENT_BINARY_DIR}/lib${PROJECT_NAME}_f03.f90
)

set_target_properties(${PROJECT_NAME}_f03_lib PROPERTIES
  Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
)

target_link_libraries(${PROJECT_NAME}_f03_lib PRIVATE ${PROJECT_NAME}_lib)

target_include_directories(${PROJECT_NAME}_f03_lib
  PUBLIC
    $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
)

install(TARGETS ${PROJECT_NAME}_f03_lib
        ARCHIVE
        DESTINATION ${CMAKE_INSTALL_LIBDIR})
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/lib${PROJECT_NAME}_f03.mod
        DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/lib${PROJECT_NAME})
install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/lib${PROJECT_NAME}_f03_stubs.f90
        DESTINATION ${CMAKE_INSTALL_DATADIR})

if(LIBRPA_ENABLE_TEST AND LIBRPA_ENABLE_FORTRAN_TEST)
  add_subdirectory(test)
endif()
